--- a/Java/teste/build.gradle
+++ b/Java/teste/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'jacoco'
 apply plugin: 'application'
 
 
-mainClassName = 'DesafioSemana6.Principal'
+mainClassName = 'teste.Main'
 
 repositories {
     mavenCentral()
